fix table spacing issue and form submission issue

--- a/mturk/styles.css
+++ b/mturk/styles.css
@@ -39,5 +39,6 @@ table#reviews-table th {
 table#reviews-table td {
     vertical-align: top;
     border-top: 1px solid #ccc;
+    width: 25%;
     }
     
